- correction of code due to bu-report, here remove of dead variables in kernel
git-svn-id: https://efaps.googlecode.com/svn/eFaps-kernel/trunk@6679 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0